@@ -949,6 +949,8 @@ public interface CMMsg extends CMCommon
 	public static final int TYP_POWERCURRENT=107;
 	/** MINOR_MASK minor action code type, denoting power current flowing */
 	public static final int TYP_CONTEMPLATE=108;
+	/** MINOR_MASK minor action code type, denoting power current flowing */
+	public static final int TYP_POUR=109;
 
 	/** MINOR_MASK minor action code type, denoting a channel action -- 2000-2047 are channels*/
 	public static final int TYP_CHANNEL=2000; //(2000-2047 are channels)
@@ -974,7 +976,7 @@ public interface CMMsg extends CMCommon
 		"DAMAGE", "HEALING", "ROOMRESET", "RELOAD", "SNIFF", "ACTIVATE", "DEACTIVATE", 
 		"FACTIONCHANGE", "LOGIN", "LEVEL", "EXAMINE", "ORDER","EXPIRE","BORROW","HUH",
 		"LIFE", "BID", "CLANEVENT", "UNLOAD", "DUELCHALLENGE", "LEGALWARRANT", "DIG", 
-		"PREINVOKE","POSSESS","DISPOSSESS","POWERCURRENT","CONTEMPLATE"
+		"PREINVOKE","POSSESS","DISPOSSESS","POWERCURRENT","CONTEMPLATE","POUR"
 	};
 	
 	/** Index string descriptions of all the MAJOR_MASK code MAKS_s */
@@ -1258,4 +1260,6 @@ public interface CMMsg extends CMCommon
 	public static final int MSG_POWERCURRENT=CMMsg.MASK_ALWAYS|TYP_POWERCURRENT;
 	/** combined MAJOR and MINOR codes for useful event message type for power current flow*/
 	public static final int MSG_CONTEMPLATE=CMMsg.MASK_ALWAYS|TYP_CONTEMPLATE;
+	/** combined MAJOR and MINOR codes for useful event message type for a pour onto event*/
+	public static final int MSG_POUR=MASK_HANDS|MASK_MOVE|MASK_SOUND|TYP_POUR;
 }
