@@ -94,23 +94,25 @@ public class GenMultiPotion extends GenDrink implements Potion
 		readableText=text;
 		setSpellList(readableText);
 	}
-	
 
-	public void drinkIfAble(MOB mob)
+	public void drinkIfAble(MOB owner, Physical drinkerTarget)
 	{
 		List<Ability> spells=getSpells();
-		if(mob.isMine(this))
+		if(owner.isMine(this))
 		{
 			if((!isDrunk())&&(spells.size()>0))
 			{
 				for(int i=0;i<spells.size();i++)
 				{
 					Ability thisOne=(Ability)((Ability)spells.get(i)).copyOf();
+					if((drinkerTarget instanceof Item)
+					&&((!thisOne.canTarget(drinkerTarget))&&(!thisOne.canAffect(drinkerTarget))))
+						continue;
 					int level=phyStats().level();
 					int lowest=CMLib.ableMapper().lowestQualifyingLevel(thisOne.ID());
 					if(level<lowest)
 						level=lowest;
-					thisOne.invoke(mob,mob,true,level);
+					thisOne.invoke(owner,drinkerTarget,true,level);
 				}
 			}
 
@@ -123,10 +125,14 @@ public class GenMultiPotion extends GenDrink implements Potion
 	public boolean okMessage(final Environmental myHost, final CMMsg msg)
 	{
 		if((msg.amITarget(this))
-		   &&(msg.targetMinor()==CMMsg.TYP_DRINK)
-		   &&(msg.othersMessage()==null)
-		   &&(msg.sourceMessage()==null))
-				return true;
+		&&(msg.targetMinor()==CMMsg.TYP_DRINK)
+		&&(msg.othersMessage()==null)
+		&&(msg.sourceMessage()==null))
+			return true;
+		else
+		if((msg.tool()==this)
+		&&(msg.targetMinor()==CMMsg.TYP_FILL))
+			return true;
 		return super.okMessage(myHost,msg);
 	}
 
@@ -140,13 +146,13 @@ public class GenMultiPotion extends GenDrink implements Potion
 			case CMMsg.TYP_DRINK:
 				if((msg.sourceMessage()==null)&&(msg.othersMessage()==null))
 				{
-					drinkIfAble(mob);
+					drinkIfAble(mob,mob);
 					if(isDrunk())
 					{
 						mob.tell(name()+" vanishes!");
 						destroy();
-						mob.recoverPhyStats();
 					}
+					mob.recoverPhyStats();
 				}
 				else
 				{
@@ -157,6 +163,26 @@ public class GenMultiPotion extends GenDrink implements Potion
 			default:
 				super.executeMsg(myHost,msg);
 				break;
+			}
+		}
+		else
+		if((msg.tool()==this)&&(msg.targetMinor()==CMMsg.TYP_FILL)&&(msg.target() instanceof Physical))
+		{
+			if((msg.sourceMessage()==null)&&(msg.othersMessage()==null))
+			{
+				drinkIfAble(msg.source(),(Physical)msg.target());
+				if(isDrunk())
+				{
+					msg.source().tell(name()+" vanishes!");
+					destroy();
+				}
+				msg.source().recoverPhyStats();
+				((Physical)msg.target()).recoverPhyStats();
+			}
+			else
+			{
+				msg.addTrailerMsg(CMClass.getMsg(msg.source(),msg.target(),msg.tool(),CMMsg.NO_EFFECT,null,msg.targetCode(),msg.targetMessage(),CMMsg.NO_EFFECT,null));
+				super.executeMsg(myHost,msg);
 			}
 		}
 		else
